Fixing sonar issues and additional unit tests for coverage
LMCROSSITXSADEPLOY-3563